# holtburger

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  dist-manifest.json
.github/skills/protocol-reverse-engineering/: SKILL.md
.github/skills/testing/: SKILL.md
.github/workflows/: dev-to-main.yml  main-to-dev.yml  nightly.yml
ace-root/: .gitignore  README.md  db_tool.sh  docker-compose.yml  docker.example.env
apps/holtburger-cli/: Cargo.toml
apps/holtburger-cli/src/: actions.rs  classification.rs  lib.rs  ui.rs  ui.rs.bak
apps/holtburger-cli/src/ui/: action.rs  mod.rs  model.rs  state.rs  types.rs  utils.rs
apps/holtburger-cli/src/ui/update/: input.rs  mod.rs  world.rs
apps/holtburger-cli/src/ui/widgets/: character.rs  chat.rs  dashboard.rs  effects.rs  mod.rs  nearby.rs  selection.rs  stats.rs  status.rs
client-rs/: Cargo.toml
client-rs/src/: client.rs  crypto.rs  lib.rs  main.rs  properties.rs  protocol.rs  session.rs  ui.rs
crates/holtburger-core/: Cargo.toml  repro.hex
crates/holtburger-core/src/: lib.rs  math.rs
crates/holtburger-core/src/client/: mod.rs  types.rs
crates/holtburger-core/src/dat/: graphics.rs  landblock.rs  mod.rs  physics.rs  utils.rs  weenie.rs
crates/holtburger-core/src/dat/file_type/: gfx_obj.rs  mod.rs
crates/holtburger-core/src/protocol/: errors.rs  fixtures.rs  messages.rs  mod.rs  properties.rs  serialization_tests.rs
crates/holtburger-core/src/protocol/messages/: character.rs  chat.rs  common.rs  constants.rs  effects.rs  game_action.rs  game_event.rs  game_message.rs  inventory.rs  magic.rs  misc.rs  mod.rs  movement.rs  net.rs  object.rs  opcodes.rs  player.rs  test_helpers.rs  traits.rs  transport.rs  utils.rs  world.rs
crates/holtburger-core/src/session/: capture.rs  mod.rs
crates/holtburger-core/src/world/: entity.rs  guid.rs  mod.rs  physics_types.rs  player.rs  position.rs  properties.rs  spatial.rs  state.rs  stats.rs
crates/holtburger-debug-harness/: Cargo.toml  DEBUG_WORKFLOW.md
crates/holtburger-debug-harness/examples/: barebones_client.rs  repro_login.rs
crates/holtburger-debug-harness/src/: extractor.rs  lib.rs
docs/: README.md  bsp_format.md  cryptography.md  dat_format.md  data_download.md  gameplay_options.md  glossary.md  handshake.md  magic.md  maintenance.md  messages.md  movement.md  physics.md  properties.md  serialization.md  stats.md  transport.md
