[workspace]
resolver = "2"
members = [
    "crates/holtburger-core",
    "apps/holtburger-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["holtburger contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cluracan/holtburger"

[workspace.dependencies]
holtburger-core = { path = "crates/holtburger-core" }
tokio = { version = "1", features = ["full"] }
byteorder = "1.5"
anyhow = "1.0"
rand = "0.8"
log = "0.4"
env_logger = "0.10"
encoding_rs = "0.8"
clap = { version = "4.0", features = ["derive"] }
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
futures = "0.3"
binrw = "0.14"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
async-trait = "0.1"
glam = "0.25"
bitflags = { version = "2.6", features = ["serde"] }

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.30.3"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "skip"
# Whether to install an updater program
install-updater = false

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
