[package]
name = "holtburger"
version = "0.1.0"
edition = "2024"
default-run = "holtburger"

[dependencies]
tokio = { version = "1", features = ["full"] }
byteorder = "1.5"
anyhow = "1.0"
rand = "0.8"
log = "0.4"
env_logger = "0.10"
encoding_rs = "0.8"
clap = { version = "4.0", features = ["derive"] }
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
futures = "0.3"
