[package]
name = "holtburger-debug-harness"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
holtburger-core.workspace = true
tokio.workspace = true
anyhow.workspace = true
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
hex = "0.4"
